# llm_qa_bot

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
scripts/: entrypoint.sh
server/: api.py  chat_socket_server.py
server/frontend/: api_handler.py  app.py  socket_client.py
server/sockets/: server.py
server/vector_storage/: azure_vector_storage.py
