[tool.poetry]
name = "genai-partners"
version = "0.1.0"
description = ""
authors = ["German Grandas <german.grandas@utp.edu.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.108.0"
uvicorn = {extras = ["standard"], version = "^0.25.0"}
azure-search-documents = "11.4.0b8"
langchain = "^0.0.354"
sentence-transformers = "^2.2.2"
pip = "^23.3.2"
streamlit = "^1.29.0"
python-multipart = "^0.0.6"
azure-identity = "^1.15.0"
pypdf = "^3.17.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"